<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_dark"
    android:padding="10dp"
    tools:context=".EditActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_for_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/edTitleSave"
        android:visibility="gone"
        android:background="@drawable/radius_10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image_crete"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/radius_10"/>

        <ImageButton
            android:id="@+id/button_image_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="15dp"
            android:src="@drawable/ic_baseline_image_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/image_button_add" />

        <ImageButton
            android:contentDescription="@string/image_delete"
            android:id="@+id/button_image_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="15dp"
            android:src="@drawable/ic_baseline_delete_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edTitleSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/radius_10"
        android:hint="@string/hint_title"
        android:inputType="text"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container_for_image"
        app:layout_constraintBottom_toTopOf="@+id/edTextSave"
        android:layout_marginVertical="8dp"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edTextSave"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/radius_10"
        android:gravity="top"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/edTitleSave"
        app:layout_constraintStart_toStartOf="@+id/edTitleSave"
        app:layout_constraintTop_toBottomOf="@+id/edTitleSave" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_search_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="80dp"
        android:alpha="0.8"
        android:backgroundTint="@android:color/holo_blue_bright"
        android:src="@drawable/ic_baseline_image_search_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/create_image"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_search_image"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="15dp"
        android:alpha="0.8"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:src="@drawable/ic_baseline_save_alt_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/save" />

</androidx.constraintlayout.widget.ConstraintLayout>